--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/richardph911/backend-setup#readme",
   "devDependencies": {
     "@types/express": "^4.17.20",
+    "@types/jsonwebtoken": "^9.0.4",
     "@types/node": "^20.8.8",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
