add refresh token into db

--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ JWT_SECRET='1234twitter$@'
 REFRESH_TOKEN_EXPIRED_IN='100d'
 #expired in single digit means second, string without char mean mili second, otherwise need to have string like days, d, m, h, w...
 ACCESS_TOKEN_EXPIRED_IN='15m'
+DB_REFRESH_TOKENS_COLLECTION='refresh_tokens'
